[package]
name = "r2d2-nats"
version = "0.1.0"
authors = ["nathan <grimaudathan@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Nats support for the r2d2 connection pool"
keywords = ["nats", "natsio", "pool"]

[lib]
name = "r2d2_nats"
path = "src/lib.rs"
test = false

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
r2d2 = "0.8.2"
nats = "0.3.1"
